# powergine

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md
examples/rrtviewer/include/: GoalBiasRRT.h  Map.h  Obstacle.h  PerformanceReport.h  RRT.h  RRTFactory.h  Renderer.h  SRRT.h  StarRRT.h  VBRRT.h
examples/rrtviewer/src/: GoalBiasRRT.cpp  Map.cpp  Obstacle.cpp  PerformanceReport.cpp  RRT.cpp  RRTFactory.cpp  Renderer.cpp  SRRT.cpp  StarRRT.cpp  VBRRT.cpp  main.cpp
include/powergine/: config.h  core.h  powergine.h
include/powergine/primitives/: color.h  graph.h  graphedge.h  graphvertex.h  image.h  line.h  material.h  matrix3x3.h  matrix4x4.h  plane.h  polygonbuffer.h  quad.h  quaternion.h  ray.h  renderprimitive.h  textcoords.h  texture.h  triangle.h  vector3d.h  vertex.h  vertexbuffer.h  vertexdiffuse.h  vertexdiffusenormal.h  vertexelement.h  vertexformat.h  vertexnormal.h  vertextexture.h  vertextexturediffuse.h  vertextexturediffusenormal.h  vertextexturenormal.h
include/powergine/sceneobjects/: aabb.h  baseentity.h  boundingvolume.h  bsplump.h  bspnode.h  bsptree.h  bspvisdata.h  camera.h  chb.h  frustum.h  joint.h  light.h  massparticle.h  mesh.h  obb.h  physicsnode.h  renderentity.h  rigidbody.h  room.h  sceneentity.h  scenenode.h  skeleton.h  skydome.h  spring.h  srtnode.h
include/powergine/services/comm/: communicationmanager.h  invalidparameterexception.h  ioexception.h  netkeyboardclient.h  netkeyboardeventadapter.h  netkeyboardserver.h  sdlnetkeyboardeventadapter.h  sdltcpsocket.h  sdludpsocket.h  socket.h  socketevent.h  socketlistener.h  sockettransferevent.h
include/powergine/services/input/: inputaction.h  inputmanager.h
include/powergine/services/input/events/: joyevent.h  keyevent.h  mousebuttonevent.h  mousemotionevent.h
include/powergine/services/input/listeners/: joylistener.h  keylistener.h  mousebuttonlistener.h  mousemotionlistener.h
include/powergine/services/input/sdl/: sdlinputmanager.h
include/powergine/services/physics/: physicsmanager.h
include/powergine/services/video/: orthographicprojection.h  perspectiveprojection.h  projection.h  rendermode.h  renderwindow.h  videomanager.h  videoproperties.h  viewport.h
include/powergine/services/video/opengl/: ogltexture.h  oglvertexbuffer.h  oglvideomanager.h  sdlimage.h
include/powergine/tools/: astarpathfinder.h  objface.h  objfile.h  objmtllib.h  q3bspbrush.h  q3bspbrushside.h  q3bspface.h  q3bspfile.h  q3bspheader.h  q3bspleaf.h  q3bsplightmap.h  q3bsplump.h  q3bspnode.h  q3bspplane.h  q3bsptexture.h  q3bspvertex.h  q3bspvisdata.h
include/powergine/utils/: bitset.h  buffer.h  buffer_inl.h  collection.h  contact.h  contactset.h  entityvisitor.h  iterator.h  mathhelper.h  powergineapp.h
src/powergine/: core.cpp
src/powergine/primitives/: color.cpp  graph.cpp  graphedge.cpp  graphvertex.cpp  line.cpp  material.cpp  matrix3x3.cpp  matrix4x4.cpp  plane.cpp  polygonbuffer.cpp  quad.cpp  quaternion.cpp  ray.cpp  renderprimitive.cpp  texture.cpp  triangle.cpp  vector3d.cpp  vertex.cpp  vertexbuffer.cpp  vertexdiffuse.cpp  vertexdiffusenormal.cpp  vertexelement.cpp  vertexnormal.cpp  vertextexture.cpp  vertextexturediffuse.cpp  vertextexturediffusenormal.cpp  vertextexturenormal.cpp
src/powergine/sceneobjects/: aabb.cpp  baseentity.cpp  bsplump.cpp  bspnode.cpp  bsptree.cpp  bspvisdata.cpp  camera.cpp  chb.cpp  frustum.cpp  joint.cpp  light.cpp  massparticle.cpp  mesh.cpp  obb.cpp  physicsnode.cpp  renderentity.cpp  rigidbody.cpp  room.cpp  sceneentity.cpp  scenenode.cpp  skeleton.cpp  skydome.cpp  spring.cpp  srtnode.cpp
src/powergine/services/comm/: communicationmanager.cpp  netkeyboardclient.cpp  netkeyboardserver.cpp  sdlnetkeyboardeventadapter.cpp  sdltcpsocket.cpp  sdludpsocket.cpp  socket.cpp
src/powergine/services/input/: inputmanager.cpp
src/powergine/services/input/sdl/: sdlinputmanager.cpp
src/powergine/services/physics/: physicsmanager.cpp
src/powergine/services/video/: orthographicprojection.cpp  perspectiveprojection.cpp  projection.cpp  rendermode.cpp  renderwindow.cpp  videomanager.cpp  videoproperties.cpp  viewport.cpp
src/powergine/services/video/opengl/: ogltexture.cpp  oglvertexbuffer.cpp  oglvideomanager.cpp  sdlimage.cpp
src/powergine/tools/: astarpathfinder.cpp  objfile.cpp  objmtllib.cpp  q3bspfile.cpp
src/powergine/utils/: bitset.cpp  contact.cpp  contactset.cpp  entityvisitor.cpp  mathhelper.cpp
